--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "next": "13.4.19",
     "playwright": "1.39.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "16.18.60",
