--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "private": true,
   "main": "desktop/main.js",
   "scripts": {
-    "dev": "next dev",
+    "dev": "node scripts/run-next-with-port.js dev",
     "build": "next build",
-    "start": "next start",
+    "start": "node scripts/run-next-with-port.js start",
     "lint": "next lint",
     "prisma": "prisma",
     "desktop": "electron .",
-    "desktop:dev": "concurrently \"npm run dev\" \"wait-on http://localhost:3000 && electron .\"",
+    "desktop:dev": "node scripts/desktop-dev.js",
     "desktop:prepare": "node desktop/scripts/prepare-desktop.js",
     "desktop:dist": "npm run desktop:prepare && electron-builder --mac --x64 --win --x64",
     "desktop:mac": "npm run desktop:prepare && electron-builder --mac --x64",
